# Monad-Hackaton

./: .env.example  .gitignore  .replit  CHARTER.md  CLOUDFLARE_PRODUCTION.md  DEPLOYMENT.md  Dockerfile  GO_TO_MARKET.md  INTEGRATION.md  INTEGRATION_PLAN.md  PRODUCTION.md  README.md  REPLIT_RETIREMENT.md  SALES_STRATEGY.md  STRATEGY_SUMMARY.md  SUBMISSION.md  package.json  pnpm-lock.yaml  render.yaml
.agents/: agent_assets_metadata.toml
attached_assets/: Pasted--Thought-for-1-5s-Turning-the-canvas-and-core-surfaces-_1784412029777.txt
contracts/: MonadBuilderRegistry.sol  MonadDApp.json  MonadDApp.sol  README.md  foundry.toml
demo/: README.md  record-demo.mjs
desktop/: electron-builder.yml  package.json
docs/: CLOUD_ENGINES.md  COMPANY_OS.md  DELTA_AI.md  ECOSYSTEM_LAWS.md  EDGE_WORKERS.md  EXPLAINABILITY_CONTRACT.md  HYBRID_WORKERS.md  LAWBOOK.md  LOCAL_AI.md  NOMOS.md  (+13 more)
engine/: README.md  pyproject.toml
engine/tests/: test_cli.py  test_core.py  test_synthetic_users.py  test_wallet_identity.py
engine/thesis_forge/: __init__.py  academy.py  agents.py  ai_node.py  api.py  atlas.py  auto_exec.py  brand.py  builder.py  cli.py  codegen.py  competition.py  compiler.py  daily.py  delta_ai.py  ecosystem.py  ecosystem_laws.py  edge_workers.py  events.py  explain.py  gas_intel.py  hybrid.py  intelligence.py  lawbook.py  live_feed.py  marks.py  mcp_server.py  models.py  network.py  nomos.py  pipeline.py  platform.py  policy.py  polyglot.py  progress.py  receipts.py  reports.py  rpc_probe.py  sandbox.py  serve.py  (+18 more)
engine/thesis_forge/company/: __init__.py  departments.py  models.py  os.py
engine/thesis_forge/engines/: __init__.py  base.py  chain_engine.py  doc_engine.py  gas_engine.py  index_engine.py  law_engine.py  orchestrator.py  registry.py  research_engine.py  rpc.py  security_engine.py
(+263 files in other folders)
