[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "thesis-forge"
version = "2.1.0"
description = "THESIS Platform — shared primitives + app runtime for Monad DeFi"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "pydantic>=2.8",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "httpx>=0.27"]

[tool.setuptools.packages.find]
include = ["thesis_forge*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
