[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "thesis-forge"
version = "2.7.0"
description = "MonadBuilder+ and THESIS — application, wallet, agent, governance, and receipt runtime for Monad"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "pydantic>=2.8",
]

[project.scripts]
thesis = "thesis_forge.cli:main"
monadbuilder = "thesis_forge.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.2", "httpx>=0.27"]

[tool.setuptools.packages.find]
include = ["thesis_forge*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
